# ML-Research-Federative-sim

./: .gitignore  LICENSE  README.md  client.py  data_partitioner.py  data_utils.py  download_cifar10.py  fedavg_baseline.py  fedprox.py  logger.py  model.py  model_cifar.py  phase2_experiment.py  phase3_experiment.py  phase3_research.md  pyproject.toml  requirements.txt  server.py  visualize_distribution.py
.agents/: AGENTS.md
results/phase2/: _smoke_test_logger_clients.json  _smoke_test_logger_rounds.csv  dirichlet_alpha01_clients.json  dirichlet_alpha01_rounds.csv  dirichlet_alpha05_clients.json  dirichlet_alpha05_rounds.csv  iid_clients.json  iid_rounds.csv
results/phase3/: fedavg_dirichlet_alpha0.1_clients.json  fedavg_dirichlet_alpha0.1_rounds.csv  fedprox_dirichlet_alpha0.1_clients.json  fedprox_dirichlet_alpha0.1_rounds.csv
tests/: test_fedprox.py
