[project]
name = "federated-learning"
version = "0.1.0"
description = "FedAvg from scratch — Phase 1: FL foundations on MNIST"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "torch==2.12.0",
    "torchvision==0.27.0",
    "numpy==2.4.6",
    "matplotlib==3.11.0",
    "tqdm==4.68.3",
]
