[project]
name = "federated-learning"
version = "0.1.0"
description = "FedAvg from scratch — Phase 1: FL foundations on MNIST"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "numpy==2.4.6",
    "matplotlib==3.11.0",
    "tqdm==4.68.3",
    "torch",
    "torchvision",
]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }
